--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,10 @@
   		<artifactId>je</artifactId>
   		<version>5.0.73</version>
   	</dependency>
+  	<dependency>
+  		<groupId>log4j</groupId>
+  		<artifactId>log4j</artifactId>
+  		<version>1.2.17</version>
+  	</dependency>
   </dependencies>
 </project>
